# autoinst

./: .gitignore  README.md  setup.sh  test.py  vis_chunks.py
2D-VFMs/SAM/: Dockerfile  README.md  adapter.py  docker_run.sh  docker_run_kitti.sh  docker_run_nuscenes.sh  requirements.txt  run.py
2D-VFMs/SLIC/: run.py  (+5 more)
Point_to_Pixel_Correspondences/: README.md  functions.py  lidar_to_image.py  ptp_notebook.ipynb  utils.py
hidden-point-removal/: Dockerfile  README.md  docker_run.sh  run.py
normalized_cut/: normalized_cut.py
pipeline/: .gitignore  config.py  example.ipynb  geometric_comparison.ipynb  geometric_comparison_nuscenes.ipynb  run_pipeline.py
pipeline/segmentation/voxel_clustering_dependencies/clustering/: CMakeLists.txt  CVC_cluster.cpp
point-to-pixel-mapping/: .gitignore  3duis_processing.ipynb  Nonesubsampled_data0_0.npz  README.md  aggregate_pointcloud.py  chunk_generation.py  cluster_preprocessing.ipynb  conda_requirements.txt  config.py  create_sam_masks.py  dataset_utils.py  evaluation.py  example.ipynb  example_dataset_generation.ipynb  example_dataset_generation_nuscenes.ipynb  example_dataset_generation_out.ipynb  example_dataset_generation_out_nuscenes.ipynb  example_dataset_generation_out_nuscenes_full_map.ipynb  example_dataset_generation_out_nuscenes_full_map_3duis.ipynb  example_dataset_generation_out_nuscenes_full_map_clustering.ipynb  example_dataset_generation_out_preprocess_train copy.ipynb  example_dataset_generation_out_preprocess_train.ipynb  example_dataset_generation_out_refactor copy.ipynb  example_dataset_generation_out_refactor.ipynb  example_dataset_generation_out_refactor_large.ipynb  example_dataset_generation_out_refactor_maskpls.ipynb  example_kitti.ipynb  example_nuscenes.ipynb  example_pandaset.ipynb  example_reprojection.ipynb  fix_maps.py  generate_data_semantics.py  generate_data_semantics_instances_nuscenes.py  generate_semantics_from_chunks.py  generate_train_data.py  generate_train_data_nuscenes.py  generate_train_data_object_filter.py  hidden_points_removal.py  image_utils.py  load_instances.py  (+27 more)
point-to-pixel-mapping/utils/maskpls/utils/voxel_clustering_dependencies/patchworkpp/: CMakeLists.txt  patchworkpp.h  pybinding.cpp
reprojection/: aggregate_pointcloud.py  reproject_pointcloud.py
self-training/: README.md  requirements.txt
(+232 files in other folders)
